[package]
name = "rdbc-tokio-postgres"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.22"
rdbc = { path = "../rdbc", version = "0.1.6" }
sqlparser = "0.5.0"
tokio = "0.2.10"
tokio-postgres = "0.5.1"
